wk_taa_taaqa/src/objects/Account_Data_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Data Requests</relationshipLabel>
        <relationshipName>Account_Data_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <inlineHelpText>Admin use only - admin will provide details on request status, and details on action taken if approved/reason rejected if not approved.</inlineHelpText>
        <label>Admin Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <formula>DATEVALUE( LastModifiedDate ) -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Technician</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Data_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Owner:User.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>High_Level_Division__c</fullName>
        <formula>TEXT(Owner:User.High_Level_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Level Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_With_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the SFDC Account # that this account should merge with. The number you enter will the duplicate Account</inlineHelpText>
        <label>Merge With Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Data Requests (Merge With Account)</relationshipLabel>
        <relationshipName>Account_Data_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Account_Segment__c</fullName>
        <label>New Account Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>Banks and Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial and Estate Planners</fullName>
                </value>
                <value>
                    <fullName>General Corporate</fullName>
                </value>
                <value>
                    <fullName>Hospital and Payers</fullName>
                </value>
                <value>
                    <fullName>Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>Legal Professionals</fullName>
                </value>
                <value>
                    <fullName>Retail Tax Preparer</fullName>
                </value>
                <value>
                    <fullName>Schools and Libraries</fullName>
                </value>
                <value>
                    <fullName>State and Local Government</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt and Membership Organizations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account_SubSegment__c</fullName>
        <label>New Account SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>New_Account_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>2-4 Total Employees</fullName>
                </value>
                <value>
                    <fullName>5-9 Total Employees</fullName>
                </value>
                <value>
                    <fullName>10-19 Total Employees</fullName>
                </value>
                <value>
                    <fullName>20-49 Total Employees</fullName>
                </value>
                <value>
                    <fullName>50-99 Total Employees</fullName>
                </value>
                <value>
                    <fullName>100+ Total Employees</fullName>
                </value>
                <value>
                    <fullName>Top 100 Firms</fullName>
                </value>
                <value>
                    <fullName>2-Year School</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Dept of Agriculture</fullName>
                </value>
                <value>
                    <fullName>Dept of Commerce</fullName>
                </value>
                <value>
                    <fullName>Dept of Defense</fullName>
                </value>
                <value>
                    <fullName>Dept of Energy</fullName>
                </value>
                <value>
                    <fullName>Dept of Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>Dept of Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Dept of Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Dept of Interior</fullName>
                </value>
                <value>
                    <fullName>Dept of Justice</fullName>
                </value>
                <value>
                    <fullName>Dept of Labor</fullName>
                </value>
                <value>
                    <fullName>Dept of State</fullName>
                </value>
                <value>
                    <fullName>Dept of Treasury (not IRS)</fullName>
                </value>
                <value>
                    <fullName>Dept of Vet Affairs</fullName>
                </value>
                <value>
                    <fullName>EEOC</fullName>
                </value>
                <value>
                    <fullName>Exec Branch (White House)</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProSW_Account_Cleanup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProSW Account Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <inlineHelpText>Provide details to support this request.</inlineHelpText>
        <label>Request Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Segment/SubSegment Change</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Assignment Change</fullName>
                </value>
                <value>
                    <fullName>New Prospect Request</fullName>
                </value>
                <value>
                    <fullName>New Partner Account Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Account__c</fullName>
        <label>SFDC Account #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Approved - Update Scheduled</fullName>
                </value>
                <value>
                    <fullName>Approved - Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Ready to Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Data Request</label>
    <listViews>
        <fullName>Data_Administrator_Account_Data_Request</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assigned_Technician__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Data Administrator</label>
        <language>en_US</language>
        <queue>Data_Administrator</queue>
    </listViews>
    <listViews>
        <fullName>My_Data_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>4. My Data Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Submitted_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>1. Submitted Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2_In_Progress_Requests</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Technician__c</columns>
        <columns>Account__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>2. In Progress Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_All_Open_Requests</fullName>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Technician__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Submitted,In Progress,Recalled</value>
        </filters>
        <label>3. All Open Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X4_Requests_Not_Yet_Submitted</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>0. Requests Not Yet Submitted</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ADR-{000000}</displayFormat>
        <label>Account Data Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Data Requests</pluralLabel>
    <recordTypes>
        <fullName>Account_Data_Request</fullName>
        <active>true</active>
        <label>Account Data Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Segment_Sub_Segment_Change</fullName>
        <active>true</active>
        <label>Market Segment / Sub Segment Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Prospect_Request</fullName>
        <active>true</active>
        <label>New Prospect Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Duplicate_Record_Request</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Request_Type__c,&quot;Duplicate&quot;) , 
     ISBLANK( Merge_With_Account__c ) )</errorConditionFormula>
        <errorMessage>For Duplicate requests, you need to select the Account to be merged in the &quot;Merge With Account&quot; field below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.Id = CreatedById ,
    LEN( Assigned_Technician__r.Id )&gt;0,
    OR(ISPICKVAL( Status__c, &quot;In Progress&quot;),
       ISPICKVAL( Status__c, &quot;Recalled&quot;))
)</errorConditionFormula>
        <errorMessage>Work has begun on this record and it cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>